--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@ h2 {
   background-color: red;
   margin-bottom: 10px;
 }
+
+.footer {
+  text-align: center;
+  background-color: #ccc;
+  height: 50px;
+}
